--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   },
   "dependencies": {
     "@netlify/functions": "^0.7.2",
+    "tweetnacl": "^1.0.3",
     "typescript": "^4.3.2"
   },
   "devDependencies": {
+    "@types/node": "^15.6.2",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
     "@typescript-eslint/parser": "^4.25.0",
     "eslint": "^7.27.0",
