--- a/package.json
+++ b/package.json
@@ -12,14 +12,20 @@
     "typescript": "^4.3.2"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.18",
+    "@types/mocha": "^8.2.2",
     "@types/node": "^15.6.2",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
     "@typescript-eslint/parser": "^4.25.0",
+    "chai": "^4.3.4",
     "eslint": "^7.27.0",
-    "eslint-config-google": "^0.14.0"
+    "eslint-config-google": "^0.14.0",
+    "mocha": "^8.4.0",
+    "ts-node": "^10.0.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register test/*.spec.ts",
+    "build": "node build.js"
   },
   "repository": {
     "type": "git",
