--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@netlify/functions": "^0.7.2",
+    "axios": "^0.21.1",
     "tweetnacl": "^1.0.3",
     "typescript": "^4.3.2"
   },
@@ -25,9 +26,9 @@
     "ts-node": "^10.0.0"
   },
   "scripts": {
-    "test":"env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register test/*.spec.ts",
+    "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register test/*.spec.ts",
     "test-with-coverage": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' nyc --reporter=html mocha -r ts-node/register test/*.spec.ts",
-    "build": "node build.js"
+    "build": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' ts-node build.ts"
   },
   "repository": {
     "type": "git",
