--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@netlify/functions": "^0.7.2",
     "axios": "^0.21.1",
+    "tslog": "^3.2.0",
     "tweetnacl": "^1.0.3",
     "typescript": "^4.3.2"
   },
